1.7.0 Release